--- a/openvidu-testapp/src/app/components/dialogs/publisher-properties-dialog.component.css
+++ b/openvidu-testapp/src/app/components/dialogs/publisher-properties-dialog.component.css
@@ -1,6 +1,6 @@
 mat-chip {
     margin: 0 0 5px 0 !important;
-    height: 12px;
+    height: 25px;
     max-width: 180px;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -28,4 +28,8 @@ button.device-btn mat-icon {
 
 div.mat-form-field-subscript-wrapper {
     margin-top: 0 !important;
+}
+
+mat-checkbox {
+    margin-right: 4px;
 }
