--- a/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
+++ b/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
@@ -78,7 +78,7 @@
               <div fxLayout="column" class="publisher-btns-div">
                 <button mat-icon-button title="Publisher properties" [id]="'publisher-settings-btn-' + index" class="mat-icon-custom" (click)="openPublisherPropertiesDialog()"
                   [disabled]="!publishTo">
-                  <mat-icon class="mat-icon-custom-ic" aria-label="Session properties button">settings</mat-icon>
+                  <mat-icon class="mat-icon-custom-ic" aria-label="Publisher properties button">settings</mat-icon>
                 </button>
                 <button mat-icon-button title="Add new publisher to running session" [id]="'session-api-btn-' + index" class="mat-icon-custom"
                   [disabled]="!session || !publishTo">
