--- a/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.html
+++ b/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.html
@@ -47,7 +47,12 @@
                 </mat-form-field>
             </div>
         </div>
+    </mat-dialog-content>
 
+    <mat-divider style="margin-bottom: 20px"></mat-divider>
+
+    <h2 mat-dialog-title>User configuration</h2>
+    <mat-dialog-content>
         <label class="label">Role</label>
         <div id="role-div">
             <mat-radio-group name="Role" [(ngModel)]="participantRole">
@@ -57,10 +62,16 @@
             </mat-radio-group>
         </div>
 
-
+        <label class="label">Token</label>
+        <div id="custom-token-div">
+            <mat-form-field>
+                <input matInput placeholder="Custom token" [(ngModel)]="customToken">
+            </mat-form-field>
+        </div>
     </mat-dialog-content>
+
     <mat-dialog-actions>
         <button mat-button [mat-dialog-close]="undefined">CANCEL</button>
-        <button mat-button [mat-dialog-close]="{sessionProperties: sessionProperties, turnConf: turnConf, manualTurnConf: manualTurnConf, participantRole: participantRole}">SAVE</button>
+        <button mat-button [mat-dialog-close]="{sessionProperties: sessionProperties, turnConf: turnConf, manualTurnConf: manualTurnConf, participantRole: participantRole, customToken: customToken}">SAVE</button>
     </mat-dialog-actions>
 </div>
