--- a/openvidu-testapp/src/app/components/dialogs/publisher-properties-dialog/publisher-properties-dialog.component.html
+++ b/openvidu-testapp/src/app/components/dialogs/publisher-properties-dialog/publisher-properties-dialog.component.html
@@ -49,7 +49,7 @@
         </mat-form-field>
     </mat-dialog-content>
     <mat-dialog-actions>
-        <button mat-button [mat-dialog-close]="initValue">CANCEL</button>
-        <button mat-button [mat-dialog-close]="setCloseValue()">SAVE</button>
+        <button id="close-btn" mat-button [mat-dialog-close]="initValue">CANCEL</button>
+        <button id="save-btn" mat-button [mat-dialog-close]="setCloseValue()">SAVE</button>
     </mat-dialog-actions>
 </div>
