--- a/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.css
+++ b/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.css
@@ -26,6 +26,7 @@ mat-radio-button:first-child {
 }
 
 #manual-turn-div {
+    background-color: #f7f7f7;
     margin-top: 10px;
     padding: 5px;
     border: 1px solid #00000026;
