--- a/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.css
+++ b/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.css
@@ -40,8 +40,9 @@ mat-dialog-content button {
 }
 
 #rec-properties-div {
+  background-color: #f7f7f7;
   margin-bottom: 10px;
-  padding: 5px;
+  padding: 10px 5px 0 5px;
   border: 1px solid #00000026;
   border-radius: 3px;
 }
@@ -52,4 +53,8 @@ mat-dialog-content button {
 
 #rec-properties-div mat-checkbox {
   margin-left: 16px;
+}
+
+#recording-resolution-form {
+  max-width: 100px !important;
 }
