openvidu-test-e2e: audio-only and video-only recording  test

--- a/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.html
+++ b/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.html
@@ -51,8 +51,8 @@
         </mat-form-field>
       </div>
       <div>
-        <mat-checkbox [(ngModel)]="recordingProperties.hasAudio">Has audio</mat-checkbox>
-        <mat-checkbox [(ngModel)]="recordingProperties.hasVideo">Has video</mat-checkbox>
+        <mat-checkbox id="rec-hasaudio-checkbox" [(ngModel)]="recordingProperties.hasAudio">Has audio</mat-checkbox>
+        <mat-checkbox id="rec-hasvideo-checkbox" [(ngModel)]="recordingProperties.hasVideo">Has video</mat-checkbox>
         <mat-form-field *ngIf="recordingProperties.outputMode.toString() === recMode[recMode.COMPOSED]" id="recording-resolution-form"
           class="inner-text-input" [style.fontSize.px]=14>
           <input matInput id="recording-resolution-field" placeholder="Resolution" type="text" [(ngModel)]="recordingProperties.resolution">
